--- a/EqUiWebUi/Views/NgacElectrode/CurrentTipstatus.cshtml
+++ b/EqUiWebUi/Views/NgacElectrode/CurrentTipstatus.cshtml
@@ -66,7 +66,7 @@
 
         <div class="panel-footer">
             <a href="~/NgacElectrode/Index" class="btn btn-primary">Electrode home &raquo;</a>
-            Last data push: '@Html.Raw(ViewBag.DataTimestamp)'
+            <p style="float:right"> Last data push: '@Html.Raw(ViewBag.DataTimestamp)'</p>     
         </div>
     </div>
 </div>
