--- a/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
@@ -2,34 +2,62 @@
 
 @*set title*@
 @{
-    ViewBag.Title = "Ploegrapport";
+    ViewBag.Title = "PloegRapport";
 }
 
-<script src="~/Scripts/jquery-3.2.1.min.js"></script>
+<div>
+    <p></p>
+    <p></p>
+    <div>
+        @Html.Grid(Model).Named("DataGrid").Build(columns =>
+                        {
+                            columns.Add(c => c.Location).Titled("Location").Filterable(true);
+                            columns.Add(c => c.logtext).Titled("Logtext");
+                            columns.Add(c => c.Response_min_).Titled("RT");
+                            columns.Add(c => c.Downtime_min_).Titled("DT");
+                            columns.Add(c => c.Count).Titled("Count");
+                            columns.Add(c => c.time).Titled("Time");
+                            columns.Add(c => c.Subgroup).Titled("Subgroup");
+                            columns.Add(c => c.Logtype).Titled("Logtype").Filterable(true);
+                            columns.Add(c => c.LocationTree)
+                            .Titled("Info")
+                            .Encoded(false)
+                            .Filterable(true)
+                            .RenderedAs(o => Html.ActionLink("INFO", "_Moreinfo",
+                               new
+                               {
+                                   location = o.Location,
+                                   errornum = o.Logcode,
+                                   refid = o.refId,
+                                   logtype = o.Logtype,
+                                   logtext = o.logtext
+                               },
+                                 new { @class = "modal-link" }
+                                 )
+                            );
+                        }).Sortable().Pageable(pager =>
+                            {
+                                pager.RowsPerPage = 20;
+                            }).Empty("No data found")
+    </div>
+
+    <div class="panel-footer">
+        @MyFilters.LocationDropdown("/Gadata/PloegRapportWebgrid", "")
+        <p style="float:right"> Last data push: '@Html.Raw(ViewBag.DataTimestamp)'</p>
+    </div>
+</div>
+
+@*render popuover modal*@
+<div>
+    @MyModals.tableHelperModal("tableModal");
+</div>
 
 @*script for setting row colors based on there values*@
 <script type="text/javascript">
     $(document).ready(function () {
-        //set colors for grid 
-        $('tbody > tr').each(function (index) {
-            if ($(this).children('td:nth-child(8)').text() == "SHIFTBOOK")
-            { $(this).children('td').css("background-color", "#d6d613"); }
+        //set colors for grid
+        tableFormatLogtype(8);
 
-            else if ($(this).children('td:nth-child(8)').text() == "WARNING")
-            { $(this).children('td').css("background-color", "#127bf1"); }
-
-            else if ($(this).children('td:nth-child(8)').text() == "LIVE")
-            { $(this).children('td').css("background-color", "#f21a1a"); }
-
-            else if ($(this).children('td:nth-child(8)').text() == "BREAKDOWN")
-            { $(this).children('td').css("background-color", "#f2af13"); }
-
-            else if ($(this).children('td:nth-child(8)').text() == "TIMELINE")
-            { $(this).children('td').css("background-color", "#16dd76"); }
-
-            else
-            { }
-        });
     });
 </script>
 
@@ -78,60 +106,6 @@
     });
 </script>
 
-<div class="code-cut">
-
-@Html.Grid(Model).Named("DataGrid").Build(columns =>
-{
-    columns.Add(c => c.Location).Titled("Location").Filterable(true);
-    columns.Add(c => c.logtext).Titled("Logtext");
-    columns.Add(c => c.Response_min_).Titled("RT");
-    columns.Add(c => c.Downtime_min_).Titled("DT");
-    columns.Add(c => c.Count).Titled("Count");
-    columns.Add(c => c.time).Titled("Time");
-    columns.Add(c => c.Subgroup).Titled("Subgroup");
-    columns.Add(c => c.Logtype).Titled("Logtype").Filterable(true);
-    columns.Add(c => c.LocationTree)
-    .Titled("Info")
-    .Encoded(false)
-    .Filterable(true)
-    .RenderedAs(o => Html.ActionLink("INFO", "_Moreinfo",
-       new
-       {
-           location = o.Location,
-           errornum = o.Logcode,
-           refid = o.refId,
-           logtype = o.Logtype,
-           logtext = o.logtext
-       },
-         new { @class = "modal-link" }
-         )
-    );
-}).Sortable().Pageable(pager =>
-    {
-        pager.RowsPerPage = 20;
-    }).Empty("No data found")
-</div>
-
-<div class="modal-content">
-    <div class="dropup">
-        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">
-            Set a location filter
-            <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu">
-            <li><a href="/Gadata/PloegRapportWebgrid">ClearFilter</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=AAL">P3</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=A FLOOR L">A FLOOR L</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=A SIBO L">A SIBO L</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=AAS">P4</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=A FLOOR S">A FLOOR S</a></li>
-            <li><a href="/Gadata/PloegRapportWebgrid?DataGrid-LocationTree-Contains=A SIBO ">A SIBO S</a></li>
-        </ul>
-
-        <a href="~/" class="btn btn-primary">goHome &raquo;</a>
-        Last data push: '@Html.Raw(ViewBag.DataTimestamp)'
-    </div>
-</div>
 
 @*info modal java script*@
 <script type="text/javascript">
@@ -151,41 +125,4 @@
     })
 </script>
 
-@*info model html only show while loading partial *@
-<div id="myModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-content">
-        <div class="modal-header">
-            <h2>I'm trying to help</h2>
-        </div>
-        <div class="modal-body">
-            <p>Trying to connect</p>
-            <p>Getting data...</p>
-            <p>Click outside of this box to abort</p>
-        </div>
-    </div>
-</div>
 
-<style>
-    /* The Modal (background) */
-    .modal {
-        display: none; /* Hidden by default */
-        position: fixed; /* Stay in place */
-        padding-top: 100px; /* Location of the box */
-        left: 0;
-        top: 0;
-        width: 100%; /* Full width */
-        height: 100%; /* Full height */
-        overflow: auto; /* Enable scroll if needed */
-        background-color: rgb(0,0,0); /* Fallback color */
-        background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-    }
-
-    /* Modal Content */
-    .modal-content {
-        background-color: #fefefe;
-        margin: auto;
-        padding: 20px;
-        border: 1px solid #888;
-        width: 80%;
-    }
-</style>
