--- a/EqUiWebUi/App_Code/MyFilters.cshtml
+++ b/EqUiWebUi/App_Code/MyFilters.cshtml
@@ -29,7 +29,7 @@ Leave ID blank!
                     <span class="caret"></span>
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a href="@redirecbase">ClearFilter</a></li>
+                    <li><a href="@redirecbase?">ClearFilter</a></li>
                     <li><a href="@redirecbase?DataGrid-LocationTree-Contains=AAL">P3</a></li>
                     <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A FLOOR L">A FLOOR L</a></li>
                     <li><a href="@redirecbase?DataGrid-LocationTree-Contains=A SIBO L">A SIBO L</a></li>
