--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -15,7 +15,8 @@
             Bevat storingen groter dan 20 minuten of die meer dan 3 keer zijn voorgevallen</p>
             <p><a href="~/Gadata/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie Robots &raquo;</a>
             Bevat alles dat nu in storing staat, storingen die langer dan 10 minuten hebben geduurd en hardwarefouten van robots</p>
-            <p><a href="http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet/" class="btn btn-primary btn-sm">Supervisie Intranet &raquo;</a>
+            <p><a href="~/Home/Rendersite?url=http://webapps.gen.volvocars.net/applications/eng/equipment/supervisiep1/intranet/" class="btn btn-primary btn-sm">Supervisie Intranet P1 &raquo;</a>
+            Supervisie intranet
             </p>
         </div>
     </div>
@@ -74,11 +75,6 @@
                 <a href="~/Sharepoint/AddNewIusse?location=TestLocation&title=TestTitle&refURL=http://MyServer/sites/MySiteCollection" class="btn btn-primary btn-sm">SharepointTest &raquo;</a>
             Test communicatie naar sharepoint.
             </p>
-            <p>
-                <a href="~/Pdf/RenderPdf" class="btn btn-primary btn-sm">PDfRender &raquo;</a>
-                Test embedded pdf files pdf.js
-            </p>
-
             <p>
                 <a href="~/NgacElectrode/index" class="btn btn-primary btn-sm">Electrode &raquo;</a>
                 Electrode index
